--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "data-source-helper": "^0.1.1"
   }
 }
